violating_resources/anthos-service-mesh/workload-policy/ingressgateway-label/samples/example_allowed_asm_ingressgateway_label_on_ingressgateway_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: asm-ingressgateway
  labels:
    app: asm-ingressgateway
    asm: ingressgateway
spec:
  containers:
  - name: istio-proxy
    image: gcr.io/gke-release/asm/proxyv2:release
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
