violating_resources/anthos-service-mesh/workload-policy/ingressgateway-label/samples/example_allowed_normal_label_on_workload_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example_allowed_normal_label_on_workload_pod
  labels:
    app: sleep
    istio: istio
spec:
  containers:
  - name: sleep
    image: curlimages/curl
  - name: istio-proxy
    image: gcr.io/gke-release/asm/proxyv2:release
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
