violating_resources/anthos-service-mesh/workload-policy/ingressgateway-label/samples/example_disallowed_asm_ingressgateway_label_wrong_image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-disallowed-asm-ingressgateway-label-wrong-image
  labels:
    app: sleep
    asm: ingressgateway
spec:
  containers:
  - name: sleep
    image: curlimages/curl
