violating_resources/anthos-service-mesh/workload-policy/ingressgateway-label/samples/example_disallowed_ingressgateway_label_injected.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sleep
  labels:
    app: sleep
    istio: ingressgateway
spec:
  containers:
  - name: sleep
    image: curlimages/curl
  - name: istio-proxy
    image: gcr.io/gke-release/asm/proxyv2:release
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
