violating_resources/anthos-service-mesh/workload-policy/ingressgateway-label/samples/example_disallowed_istio_ingressgateway_label_wrong_image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example_disallowed_istio_ingressgateway_label_wrong_image
  labels:
    app: sleep
    istio: ingressgateway
spec:
  containers:
  - name: sleep
    image: curlimages/curl
