violating_resources/anthos-service-mesh/workload-policy/ingressgateway-label/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: asm-ingressgateway-label
tests:
  - name: asm-ingressgateway-label
    template: template.yaml
    constraint: samples/constraint.yaml
    cases:
      - name: bad-istio-ingressgateway-label-on-no-sidecar-injected-pod
        object: samples/example_disallowed_istio_ingressgateway_label_wrong_image.yaml
        assertions:
          - violations: yes
      - name: bad-asm-ingressgateway-label-on-no-sidecar-injected-pod
        object: samples/example_disallowed_asm_ingressgateway_label_wrong_image.yaml
        assertions:
          - violations: yes
      - name: bad-ingressgateway-label-on-sidecar-injected-pod
        object: samples/example_disallowed_ingressgateway_label_injected.yaml
        assertions:
          - violations: yes
      - name: valid-workload-pod
        object: samples/example_allowed_normal_label_on_workload_pod.yaml
        assertions:
          - violations: no
      - name: valid-istio-ingressgateway-pod
        object: samples/example_allowed_istio_ingressgateway_label_on_ingressgateway_pod.yaml
        assertions:
          - violations: no
      - name: valid-asm-ingressgateway-pod
        object: samples/example_allowed_asm_ingressgateway_label_on_ingressgateway_pod.yaml
        assertions:
          - violations: no
